--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,7 +59,7 @@ a:hover {
   button,
   input[type="button"],
   input[type="submit"] {
-    color: #111827;
+    color: #1a1a1a;
   }
 
   .body-dark button,
@@ -80,7 +80,7 @@ a:hover {
   a[class*="bg-white"]:not([class*="text-"]),
   a[class*="bg-neutral-100"]:not([class*="text-"]),
   a[class*="bg-gray-100"]:not([class*="text-"]) {
-    color: #111827;
+    color: #000000;
   }
 }
 
